--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigatewayv2": "^1.108.0",
+    "@aws-cdk/aws-apigatewayv2-integrations": "^1.108.0",
     "@aws-cdk/aws-codebuild": "^1.108.0",
     "@aws-cdk/aws-codecommit": "^1.108.0",
     "@aws-cdk/aws-codedeploy": "^1.108.0",
     "@aws-cdk/aws-codepipeline": "^1.108.0",
     "@aws-cdk/aws-codepipeline-actions": "^1.108.0",
+    "@aws-cdk/aws-dynamodb": "^1.108.0",
     "@aws-cdk/aws-lambda": "^1.108.0",
+    "@aws-cdk/aws-lambda-event-sources": "^1.108.0",
     "@aws-cdk/core": "1.108.0",
+    "@aws-cdk/pipelines": "^1.108.0",
     "source-map-support": "^0.5.16"
   }
 }
