--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "cdk-no-approval": "cdk deploy --require-approval  never"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.108.0",
